--- a/1_Lab/docker-compose.yml
+++ b/1_Lab/docker-compose.yml
@@ -1,13 +1,18 @@
-web:
+services:
+  web:
     image: nginx:latest
     ports:
-       - "8080:80"
+      - "8080:80"
     volumes:
-       - ./code:/code
-       - ./site.conf:/etc/nginx/conf.d/site.conf
+      - ./code:/code
+      - ./hosts:/etc/nginx/conf.d
     links:
-       - php
-php:
+      - php
+  php:
     image: php:7-fpm
     volumes:
-      - ./code:/code       
+      - ./code:/code
+      - ./vendor:/vendor
+      - ./.data:/data
+    env_file:
+      - .env   
